[package]
name = "rboot"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies]
log = "0.4.6"
register = "0.3.2"
static_assertions = "*"
enum_primitive = { git = "https://github.com/roblabla/enum_primitive-rs.git", branch = "master"}
libtegra = { git = "https://github.com/mirage-rs/libtegra.git", branch = "master" }

[dependencies.num-traits]
version = "0.2"
default-features = false